data/derived/comb/progs/unify/prog6302.ml.out
Characters 412-413:
  | Arctan (e1)		  -> 2 *. (atan eval(e1,x,y)) / pi
                      ^
Error: This expression has type int but an expression was expected of type
         float
